[tool.poetry]
name = "riskcal"
version = "0.1.0"
description = "Library for calibrating differentially private algorithms to privacy risk"
authors = ["Bogdan Kulynych <bogdan@kulyny.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
torch = "==2.0.0"
opacus = "^1.4.0"
jupyter = "^1.0.0"
jupytext = "^1.15.2"
pandas = "^2.1.1"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
diffprivlib = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
