[tool.poetry]
name = "riskcal"
version = "0.1.0"
description = "Calibrate differentially private algorithms to operational privacy risk measures"
authors = ["Bogdan Kulynych <bogdan@kulyny.ch>", "Juan Felipe Gomez <juangomez@g.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
dp-accounting = "^0.4.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
opacus = "^1.4.0"
pre-commit = "^3.5.0"
ipdb = "^0.13.13"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
seaborn = "^0.13.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"
jupytext = "^1.15.2"
tqdm = "^4.66.1"
torch = "==2.0.0"
prv-accountant = "^0.2.0"

[tool.pytest.ini_options]
addopts = ["-v"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
